--- a/package.json
+++ b/package.json
@@ -19,10 +19,12 @@
     "dotenv": "^16.4.5",
     "mongoose": "^8.2.1",
     "next": "14.1.2",
+    "node-gyp": "^10.0.1",
     "openai": "^4.28.4",
     "pexels": "^1.4.0",
     "react": "^18",
     "react-dom": "^18",
-    "recharts": "^2.12.2"
+    "recharts": "^2.12.2",
+    "socket.io-client": "^4.7.5"
   }
 }
