--- a/package.json
+++ b/package.json
@@ -26,5 +26,8 @@
     "react-dom": "^18",
     "recharts": "^2.12.2",
     "socket.io-client": "^4.7.5"
+  },
+  "devDependencies": {
+    "typescript": "5.4.3"
   }
 }
